2007-01-08  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh: Allow .javain to have a main method.  Merge
	.java, and .javain source generation code.

2007-01-07  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (pkgdata_PROGRAMS): Define.

	* TestRunner.javain: Pass glade, and image directories to
	runTestCases.

2007-01-04  Andrew Cagney  <cagney@redhat.com>

	* Build.javain (ABS_BUILDDIR, BUILDDIR): Delete.

	* Makefile.rules (SUBST_SED): Substitute abs_root_srcdir, and
	root_srcdir.
	* TestRunner.javain: Replace Build.ABS_BUILDDIR with direct
	reference to @abs_builddir@.

2006-12-21  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (.cxxin.cxx): New rule.
	* Makefile.gen.sh: Add support for .cxxin.  Check .cxxin files for
	headers.

2006-12-19  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (SUBST): For .sh and .py files, chmod +x.
	(pkglib_SCRIPTS, sbin_SCRIPTS, bin_SCRIPTS): Define.
	* Makefile.gen.sh (files.list): Add .sh and .py files, convert
	using SUBST, add to corresponding SCRIPTS list.

2006-12-18  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh: For man page rule, create the dest directory.

	* Makefile.gen.sh (files.list): Include .xml files.  Add code to
	generate .xml to .man using files.list as input.
	(check_MANS): Rename echo_MANS.  Simplify.

2006-12-18  Stepan Kasal  <skasal@redhat.com>

	* m4/frysk_do_arch32_test.m4 (--disable-arch32-tests): New
	option to skip building arch32 tests.
	* frysk-common.ac: Do not call FRYSK_DO_ARCH32_TEST.
	* Makefile.gen.sh: Do not use "if DO_ARCH32_TEST" for
	variables which can appear in packages without arch32 tests.
	(arch32_cflags_output): Removed, it was modified only in
	subshells, which was confusing.
	(arch32_cflag_name, arch32_as_cflag_name): Add comment.

2006-12-14  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (JUnitTests.java): Filter out TestCase, not
	JUnit.

2006-12-14  Stepan Kasal  <skasal@redhat.com>
